# libmessenger

./: .cproject  .gitignore  .project  CMakeLists.txt  Doxyfile  Makefile  README
include/: BrokerConnection.h  IBrokerConnection.h  IMessenger.h  IMessengerListener.h  Messenger.h  MessengerFactory.h  MsgListener.h
src/: BrokerConnection.cpp  Messenger.cpp  MessengerFactory.cpp
test/: .gitignore  amazontest.cpp  linceTest.cpp  multiplyTest.cpp
